[gd_scene load_steps=12 format=3 uid="uid://1bmalf5j3q3v"]

[ext_resource type="Script" path="res://Scripts/LevelA2.gd" id="1_vl6vr"]
[ext_resource type="Texture2D" uid="uid://c8y1igbq45x0j" path="res://Assets/Environment/Start/bg/plx-1.png" id="2_kedl6"]
[ext_resource type="PackedScene" uid="uid://ihvc1sbpvo6q" path="res://Assets/Entities/Player/Player.tscn" id="3_5f3oj"]
[ext_resource type="Texture2D" uid="uid://sjv0gwdp8fq" path="res://Assets/Environment/Start/bg/plx-5.png" id="3_q46hs"]
[ext_resource type="PackedScene" uid="uid://dm3qylc5lfxon" path="res://Assets/Environment/Start/tile_map1.tscn" id="3_v3cl8"]
[ext_resource type="Texture2D" uid="uid://c6avkbtcpnlos" path="res://Assets/Environment/Start/bg/plx-2.png" id="4_2y7yr"]
[ext_resource type="Texture2D" uid="uid://waygwibvnisi" path="res://Assets/Environment/Start/bg/plx-3.png" id="5_b8j4t"]
[ext_resource type="Texture2D" uid="uid://chu02ygvmvtm2" path="res://Assets/Environment/Start/bg/plx-4.png" id="6_c6irj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbrkr"]
size = Vector2(9, 162)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gip2l"]
size = Vector2(20, 161)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtef0"]
size = Vector2(20, 162)

[node name="LevelA2" type="Node2D"]
script = ExtResource("1_vl6vr")
metadata/_edit_horizontal_guides_ = [42.0]

[node name="Plx-1" type="Sprite2D" parent="."]
position = Vector2(100, 65)
texture = ExtResource("2_kedl6")

[node name="Plx-2" type="Sprite2D" parent="Plx-1"]
texture = ExtResource("4_2y7yr")
metadata/_edit_lock_ = true

[node name="Plx-3" type="Sprite2D" parent="Plx-1"]
texture = ExtResource("5_b8j4t")
metadata/_edit_lock_ = true

[node name="Plx-4" type="Sprite2D" parent="Plx-1"]
texture = ExtResource("6_c6irj")
metadata/_edit_lock_ = true

[node name="Plx-5" type="Sprite2D" parent="Plx-1"]
texture = ExtResource("3_q46hs")
metadata/_edit_lock_ = true

[node name="Plx-2" type="Sprite2D" parent="."]
position = Vector2(480, 65)
texture = ExtResource("2_kedl6")

[node name="Plx-2" type="Sprite2D" parent="Plx-2"]
texture = ExtResource("4_2y7yr")
metadata/_edit_lock_ = true

[node name="Plx-3" type="Sprite2D" parent="Plx-2"]
texture = ExtResource("5_b8j4t")
metadata/_edit_lock_ = true

[node name="Plx-4" type="Sprite2D" parent="Plx-2"]
texture = ExtResource("6_c6irj")
metadata/_edit_lock_ = true

[node name="Plx-5" type="Sprite2D" parent="Plx-2"]
texture = ExtResource("3_q46hs")
metadata/_edit_lock_ = true

[node name="Plx-3" type="Sprite2D" parent="."]
position = Vector2(864, 65)
texture = ExtResource("2_kedl6")

[node name="Plx-2" type="Sprite2D" parent="Plx-3"]
texture = ExtResource("4_2y7yr")
metadata/_edit_lock_ = true

[node name="Plx-3" type="Sprite2D" parent="Plx-3"]
texture = ExtResource("5_b8j4t")
metadata/_edit_lock_ = true

[node name="Plx-4" type="Sprite2D" parent="Plx-3"]
texture = ExtResource("6_c6irj")
metadata/_edit_lock_ = true

[node name="Plx-5" type="Sprite2D" parent="Plx-3"]
texture = ExtResource("3_q46hs")
metadata/_edit_lock_ = true

[node name="Plx-4" type="Sprite2D" parent="."]
position = Vector2(1241, 65)
texture = ExtResource("2_kedl6")

[node name="Plx-2" type="Sprite2D" parent="Plx-4"]
texture = ExtResource("4_2y7yr")
metadata/_edit_lock_ = true

[node name="Plx-3" type="Sprite2D" parent="Plx-4"]
texture = ExtResource("5_b8j4t")
metadata/_edit_lock_ = true

[node name="Plx-4" type="Sprite2D" parent="Plx-4"]
texture = ExtResource("6_c6irj")
metadata/_edit_lock_ = true

[node name="Plx-5" type="Sprite2D" parent="Plx-4"]
texture = ExtResource("3_q46hs")
metadata/_edit_lock_ = true

[node name="TileMap" parent="." instance=ExtResource("3_v3cl8")]
layer_0/tile_data = PackedInt32Array(327680, 524288, 11, 327681, 524288, 11, 327682, 524288, 11, 327683, 524288, 11, 327684, 524288, 11, 327685, 524288, 11, 327686, 524288, 11, 327687, 524288, 11, 327688, 524288, 11, 327689, 524288, 11, 327690, 524288, 11, 327691, 524288, 11, 327692, 524288, 11, 327693, 524288, 11, 327694, 524288, 11, 327695, 524288, 11, 327696, 524288, 11, 327697, 524288, 11, 327698, 524288, 11, 327699, 524288, 11, 327700, 524288, 11, 327701, 524288, 11, 327702, 524288, 11, 327703, 524288, 11, 327704, 524288, 11, 327705, 524288, 11, 327706, 524288, 11, 327707, 524288, 11, 327708, 524288, 11, 327709, 524288, 11, 327710, 524288, 11, 327711, 524288, 11, 327712, 524288, 11, 327713, 524288, 11, 327714, 524288, 11, 327715, 524288, 11, 327716, 524288, 11, 327717, 524288, 11, 327718, 524288, 11)

[node name="Player" parent="." instance=ExtResource("3_5f3oj")]
position = Vector2(36, 132)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-8.5, 81)
shape = SubResource("RectangleShape2D_wbrkr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/CollisionShape2D"]
position = Vector2(1229.5, 1)
shape = SubResource("RectangleShape2D_wbrkr")

[node name="EdgeRight" type="Area2D" parent="."]
position = Vector2(1192, 84)

[node name="EdgeRightA2" type="CollisionShape2D" parent="EdgeRight"]
position = Vector2(14, -3)
shape = SubResource("RectangleShape2D_gip2l")

[node name="EdgeLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeLeft"]
position = Vector2(6, 82)
shape = SubResource("RectangleShape2D_vtef0")

[connection signal="body_entered" from="EdgeRight" to="." method="_on_edge_right_body_entered"]
[connection signal="body_exited" from="EdgeRight" to="." method="_on_edge_right_body_exited"]
[connection signal="body_entered" from="EdgeLeft" to="." method="_on_edge_left_body_entered"]
[connection signal="body_exited" from="EdgeLeft" to="." method="_on_edge_left_body_exited"]
